deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demok8s-ingress
  namespace: myspace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #заменяет адрес на /$1, где $1 - первая матч-группа из регулярки на 16 и 23 строке
    #например: запрос /actuator/health преобразуется в /health (см. 23 строку)
    #запрос /foo так и останется /foo (см. 16 строку)
spec:
  ingressClassName: nginx
  rules:
    - host: minikube
      http:
        paths:
          - path: /(.*) #запросы по такому адресу в кластер будут направляться в сервис demo-service на порт 8088
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8088 #должно соответствовать порту сервиса, который в свою очередь указывает на 9090 порт пода
          - path: /actuator/(.*) #запросы по такому адресу в кластер будут направляться в сервис demo-service на порт 9099
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 9099 #должно соответствовать порту сервиса, который в свою очередь указывает на 9090 порт пода
